# pyqt6-boilerplate

./: .gitignore  .pre-commit-config.yaml  my-app.spec  pyproject.toml
scripts/: rename_project.py
src/my_app/: main.py
src/my_app/config/: exception_handler.py  logging_config.py
src/my_app/presentation/: main_window.py
src/my_app/qt_styles/: __init__.py  dark.py  icon_manager.py  icons.qrc  light.py  manager.py
tests/: conftest.py  test_main_window.py  test_paths.py
