[project]
name = "my-app"
version = "0.1.0"
description = "A PyQt6 application boilerplate."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.10.2",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-qt>=4.4.0",
    "ruff>=0.15.4",
    "pre-commit>=4.5.1",
    "pyinstaller>=6.0.0",
]

[project.scripts]
my-app = "my_app.main:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Standard flake8 rules + isort
